--- a/product-api/src/main/resources/application.yml
+++ b/product-api/src/main/resources/application.yml
@@ -1,11 +1,19 @@
 spring:
   application:
-    name: payroll-api
+    name: product-api
   datasource:
-    url: jdbc:postgresql://localhost:5432/product-api
+    url: jdbc:postgresql://db:5432/product_db
     username: postgres
     password: postgres
     driver-class-name: org.postgresql.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+        show_sql: true
 server:
   port: ${PORT:8100}
 eureka:
